Update DateTimeFormatCheck.java